# battery_modelling

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
electronic_union/: __init__.py  constants.py  network.py  plots.py  tielines.py  timeseries.py
notebooks/: demo.ipynb
scripts/: precompute.py
